[tool.poetry]
name = "horusdemodlib"
version = "0.5.0"
description = "Project Horus HAB Telemetry Demodulators"
authors = ["Mark Jessop"]
license = "LGPL-2.1-or-later"
include = [
    { path = "horusbinaryv3/HorusBinaryV3.asn1", format = ["sdist", "wheel"] },
    { path = "payload_id_list.txt", format = ["sdist", "wheel"] },
    { path = "custom_field_list.json", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.5"
python-dateutil = "^2.8"
cffi = ">1.15.0"
audioop-lts = { version = "*", python = "^3.13" }
asn1tools = "^0.165.0"
crc = "^7.1.0"

[tool.poetry.build]
script = "build_lib.py"
generate-setup-file = true

[tool.poetry.group.dev.dependencies]
setuptools = "^80.9.0"
cffi = ">1.15.0"

[build-system]
requires = ["poetry-core","setuptools","cffi >1.15.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
horus_demod = 'horusdemodlib:demod.main'
horus_uploader = 'horusdemodlib:uploader.main'